crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_metadata_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(score, 3) as score FROM vector_search(qs, 'secondary') where source='textbook_reasoning' order by score desc LIMIT 4"
snapshot_kind: text
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                     |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: score DESC NULLS FIRST, fetch=4                                                                                                                                    |
|               |   Projection: vector_search(qs, Utf8("secondary")).id, vector_search(qs, Utf8("secondary")).answer, trunc(vector_search(qs, Utf8("secondary")).score, Int64(3)) AS score |
|               |     BytesProcessedNode                                                                                                                                                   |
|               |       Filter: vector_search(qs, Utf8("secondary")).source = Utf8("textbook_reasoning")                                                                                   |
|               |         TableScan: vector_search(qs, Utf8("secondary")) projection=[id, answer, source, score]                                                                           |
| physical_plan | SortPreservingMergeExec: [score@2 DESC], fetch=4                                                                                                                         |
|               |   SortExec: TopK(fetch=4), expr=[score@2 DESC], preserve_partitioning=[true]                                                                                             |
|               |     ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(score@3, 3) as score]                                                                                    |
|               |       BytesProcessedExec                                                                                                                                                 |
|               |         FilterExec: source@2 = textbook_reasoning                                                                                                                        |
|               |           ProjectionExec: expr=[id@0 as id, answer@2 as answer, source@3 as source, score@1 as score]                                                                    |
|               |             HashJoinExec: mode=CollectLeft, join_type=Left, on=[(id@0, id@0)], projection=[id@0, score@1, answer@2, source@4]                                            |
|               |               CoalescePartitionsExec                                                                                                                                     |
|               |                 BytesProcessedExec                                                                                                                                       |
|               |                   ProjectionExec: expr=[CAST(key@1 AS Int64) as id, 1 - distance@2 as score, answer@0 as answer]                                                         |
|               |                     BytesProcessedExec                                                                                                                                   |
|               |                       CooperativeExec                                                                                                                                    |
|               |                         CooperativeExec                                                                                                                                  |
|               |                           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                           |
|               |                             CooperativeExec                                                                                                                              |
|               |                               S3VectorsQueryExec: limit=30                                                                                                               |
|               |               BytesProcessedExec                                                                                                                                         |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                     |
|               |                   SchemaCastScanExec                                                                                                                                     |
|               |                     DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                    |
|               |                                                                                                                                                                          |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
