crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_metadata_vector_search_sql_projection_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, reference_answer, source, trunc(score, 3) as score FROM vector_search(qs, 'second') order by score desc LIMIT 4"
snapshot_kind: text
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                          |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: score DESC NULLS FIRST, fetch=4                                                                                                                                                                                                                         |
|               |   Projection: vector_search(qs, Utf8("second")).id, vector_search(qs, Utf8("second")).answer, vector_search(qs, Utf8("second")).reference_answer, vector_search(qs, Utf8("second")).source, trunc(vector_search(qs, Utf8("second")).score, Int64(3)) AS score |
|               |     BytesProcessedNode                                                                                                                                                                                                                                        |
|               |       TableScan: vector_search(qs, Utf8("second")) projection=[id, answer, reference_answer, source, score]                                                                                                                                                   |
| physical_plan | SortPreservingMergeExec: [score@4 DESC], fetch=4                                                                                                                                                                                                              |
|               |   SortExec: TopK(fetch=4), expr=[score@4 DESC], preserve_partitioning=[true]                                                                                                                                                                                  |
|               |     ProjectionExec: expr=[id@0 as id, answer@1 as answer, reference_answer@2 as reference_answer, source@3 as source, trunc(score@4, 3) as score]                                                                                                             |
|               |       BytesProcessedExec                                                                                                                                                                                                                                      |
|               |         ProjectionExec: expr=[id@0 as id, answer@2 as answer, reference_answer@4 as reference_answer, source@3 as source, score@1 as score]                                                                                                                   |
|               |           CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                         |
|               |             HashJoinExec: mode=Partitioned, join_type=Left, on=[(id@0, id@2)], projection=[id@0, score@1, answer@2, source@3, reference_answer@4]                                                                                                             |
|               |               RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                                                                                                                                                               |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                   |
|               |                   ProjectionExec: expr=[CAST(key@1 AS Int64) as id, 1 - distance@2 as score, answer@0 as answer]                                                                                                                                              |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                      |
|               |                       S3VectorsQueryExec: limit=30                                                                                                                                                                                                            |
|               |               RepartitionExec: partitioning=Hash([id@2], 3), input_partitions=3                                                                                                                                                                               |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                          |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                 |
|               |                     SchemaCastScanExec                                                                                                                                                                                                                        |
|               |                       DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                                       |
|               |                                                                                                                                                                                                                                                               |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
