crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_metadata_view_vector_search_sql_projection_metadata_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, question, subject, trunc(_score, 3) as _score FROM vector_search(qs_view, 'second') order by _score desc, id LIMIT 4"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                              |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs_view, Utf8("second")).id ASC NULLS LAST, fetch=4                                                                                                                                                                                  |
|               |   Projection: vector_search(qs_view, Utf8("second")).id, vector_search(qs_view, Utf8("second")).answer, vector_search(qs_view, Utf8("second")).question, vector_search(qs_view, Utf8("second")).subject, trunc(vector_search(qs_view, Utf8("second"))._score, Int64(3)) AS _score |
|               |     TableScan: vector_search(qs_view, Utf8("second")) projection=[_score, answer, id, question, subject]                                                                                                                                                                          |
| physical_plan | SortPreservingMergeExec: [_score@4 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                                            |
|               |   SortExec: TopK(fetch=4), expr=[_score@4 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                |
|               |     ProjectionExec: expr=[CAST(key@3 AS Int64) as id, answer@1 as answer, question@0 as question, subject@2 as subject, trunc(1 - distance@4, 3) as _score]                                                                                                                       |
|               |       BytesProcessedExec                                                                                                                                                                                                                                                          |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                      |
|               |           S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                                                            |
|               |                                                                                                                                                                                                                                                                                   |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
